[package]
name = "ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rustdns = { version = "0.4.0", default-features = false, features = ["udp"] }
serde = { version = "1.0.214", features = ["derive", "rc"] }
serde_json = "1.0.132"
ureq = { version = "2.10.1", features = ["json"] }
